--- a/WEB-INF/classes/MessageResources_ja.properties
+++ b/WEB-INF/classes/MessageResources_ja.properties
@@ -1,3 +1,29 @@
 errors.loginValid=ID\u30fbPASSWORD\u306f\u534a\u89d2\u82f1\u65704\uff5e12\u6587\u5b57\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 title.login=\u30ed\u30b0\u30a4\u30f3\u753b\u9762
 title.mypage=\u30de\u30a4\u30da\u30fc\u30b8
+label.name=name
+label.nickname=nickname
+label.mail=mail
+label.address=address
+label.age=age
+
+
+
+
+
+
+
+#errors.loginValid=ID\u30fbPASSWORD\u306f\u534a\u89d2\u82f1\u65704\uff5e12\u6587\u5b57\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+#title.login=\u30ed\u30b0\u30a4\u30f3\u753b\u9762
+#title.mypage=\u30de\u30a4\u30da\u30fc\u30b8
+#label.comment=Comment
+#label.mailaddress=mailaddress
+
+
+
+
+#//--------------------------------------------------------------------------------------1224
+#
+#errors.loginValid=ID\u30fbPASSWORD\u306f\u534a\u89d2\u82f1\u65704\uff5e12\u6587\u5b57\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+#title.login=\u30ed\u30b0\u30a4\u30f3\u753b\u9762
+#title.mypage=\u30de\u30a4\u30da\u30fc\u30b8
